# SG71-AUTH-EXMPLE

./: .gitignore  IntegrityGuard.cs  README.md  SG71Client.cs
SG71 AUTH C++/SG71 auth exmple/: SG71 auth exmple.cpp  SG71 auth exmple.sln  SG71 auth exmple.vcxproj  SG71 auth exmple.vcxproj.filters  SG71auth.cpp  SG71auth.h
SG71 AUTH C++/SG71 auth exmple/SG71 auth exmple/x64/Debug/: SG71 auth exmple.exe.recipe  SG71 auth exmple.ilk  SG71 auth exmple.vcxproj.FileListAbsolute.txt  vc143.idb
SG71 AUTH C++/SG71 auth exmple/SG71 auth exmple/x64/Debug/SG71 auth exmple.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SG71 auth exmple.lastbuildstate  SG71 auth exmple.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SG71AuthExample/: AuthConfig.cs  Program.cs  README.md  SG71AuthExample.csproj  SelfUpdater.cs
SG71CSharpClient/: AuthConfig.cs  Program.cs  README.md  SG71Panel.csproj
SG71CppExample/: AuthConfig.h  CMakeLists.txt  README.md  SG71CppExample.sln  SG71CppExample.vcxproj  SelfUpdater.cpp  SelfUpdater.h  main.cpp
cpp_client/: SG71Client.cpp  SG71Client.h
sg71_user_api_bot/: README.md  bot.py
sg71_user_api_web/: README.md  sg71-user-api.js  website-example.js
winform exple/exmple/: AuthConfig.cs  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Program.cs  README.md  exmple.csproj  exmple.slnx
winform exple/exmple/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
